# trajectory_optimization

./: CMakeLists.txt  LICENSE  README.md
src/: min_snap.cpp
